[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/PlayerCar.gd" type="Script" id=1]
[ext_resource path="res://assets/cars/toyota_ae86/Light.png" type="Texture" id=2]
[ext_resource path="res://assets/cars/toyota_ae86/BackLight.png" type="Texture" id=3]

[node name="PlayerCar" type="KinematicBody2D" groups=["player"]]
collision_layer = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.0745098, 0.0588235, 0.0980392, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpeedLabel" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_right = 40.0
margin_bottom = 14.0

[node name="BackLight" type="Light2D" parent="."]
position = Vector2( -64, 0 )
rotation = 0.115192
texture = ExtResource( 3 )
offset = Vector2( -20, 5 )
color = Color( 1, 0, 0, 1 )
energy = 3.35
range_layer_min = -1
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="LightLeft" type="Light2D" parent="."]
position = Vector2( 58, 14 )
scale = Vector2( 2.35938, 1.25 )
texture = ExtResource( 2 )
offset = Vector2( 64, 0 )
energy = 4.5
range_layer_min = -1
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="LightRight" type="Light2D" parent="."]
position = Vector2( 58, -14 )
scale = Vector2( 2.35156, 1.25 )
texture = ExtResource( 2 )
offset = Vector2( 64, 0 )
energy = 4.5
range_layer_min = -1
shadow_enabled = true
shadow_item_cull_mask = 3

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
